add detail of exp

--- a/exp.html
+++ b/exp.html
@@ -52,7 +52,7 @@
             <h5 id="job">Laboratory Assistance</h5>
             <p id="duration">Part-time: 7 mos</p>
             <p id="pj-detail">
-                I worked as a laboratory assistant for computer and problem solving course which is one of the course in prep program of MUICT. I helped the freshmen, give them some suggestions and encorage them to talk with each others 
+                I worked as a laboratory assistant for computer and problem solving course which is one of the course in prep program of MUICT and object oriented programmig(Java). I helped the freshmen, give them some suggestions and encorage them to talk with each others 
             </p>
             <p id="pj-tsk">
                 <span>Skills: </span>
